--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
     <!-- 들어갔을때의 첫화면 -->
     <div id="start-container">
       <div class="start-mainText">
-        <button id="start-button">Game Start</button>
+        <button id="start-button">GAME START</button>
+        <div class="game-rule">
+          <p>> <span style="color: rgb(255, 230, 0);">1부터 50 사이의 </span>숫자를 입력 </p>
+          <p>> 기회는 총 <span style="color: rgb(255, 230, 0);">5번</span></p>
+        </div>
       </div>
+      
     </div>
 
     <!-- 시작하기 버튼 클릭 시 -->
