--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <button id="start-button">GAME START</button>
         <div class="game-rule">
           <p>> <span style="color: rgb(255, 230, 0);">1부터 50 사이의 </span>숫자를 입력 </p>
-          <p>> 기회는 총 <span style="coor: rgb(255, 230, 0);">5번</span></p>
+          <p>> 기회는 총 <span style="color: rgb(255, 230, 0);">5번</span></p>
         </div>
       </div>
       
