--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- 시작하기 버튼 클릭 시 -->
     <div id="container">
         <div class="mainText">
-            <p>Random Number Game</p>
+            <p id="main-text-click">Random Number Game</p>
         </div>
   
         <div class="playContainer">
